--- a/views/my-pets.html
+++ b/views/my-pets.html
@@ -8,9 +8,10 @@
 </head>
 <body>
 
-<h3>Pets Home! (this time with a view)</h3>
-<img src="http://c3.thejournal.ie/media/2014/04/marutaro-752x501.jpg" alt="hedgehog">
-<img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fmetrouk2.files.wordpress.com%2F2013%2F05%2Fsmiling-fish.jpg" alt="axolotl">
-<img src="https://news.cgtn.com/news/3d3d674d33496a4e77457a6333566d54/img/ac0fecc544c84353a911657eb0b7e48a/ac0fecc544c84353a911657eb0b7e48a.jpg" alt="red_panda">
+<h3>My Pets</h3>
+<p>
+    {{ @pet1->eat() }}{{ @pet1->talk() }}{{ @pet1->sleep() }}
+</p>
+
 </body>
 </html>
